feat(codegen): unify feature-driven templates, README layout, and ArchUnit governance 	•	add CI workflow step to verify generated project (hexagonal + enforcement basic) via script 	•	refactor generators to use DependencyFeature consistently across application.yml, README, and pom 	•	overhaul README.md.ftl: architecture summary, layout-aware source tree, and sample-aware hexagonal section 	•	update ProjectDocumentation model: include layout/enforcement/sampleCode + features map (no legacy flags) 	•	refresh ArchUnit governance templates/tests for standard + hexagonal (basic/strict), including naming cleanup 	•	realign adapter/unit/integration tests with the new models and FreeMarker conditions