@@ -9,7 +9,6 @@ import io.github.blueprintplatform.codegen.application.port.out.artifact.Artifac
 import io.github.blueprintplatform.codegen.domain.model.ProjectBlueprint;
 import io.github.blueprintplatform.codegen.domain.model.value.architecture.ArchitectureGovernance;
 import io.github.blueprintplatform.codegen.domain.model.value.architecture.ArchitectureSpec;
-import io.github.blueprintplatform.codegen.domain.model.value.architecture.EnforcementMode;
 import io.github.blueprintplatform.codegen.domain.model.value.dependency.Dependencies;
 import io.github.blueprintplatform.codegen.domain.model.value.dependency.Dependency;
 import io.github.blueprintplatform.codegen.domain.model.value.dependency.DependencyCoordinates;
@@ -52,107 +51,179 @@ class MavenPomBuildConfigurationAdapterTest {
 
   private static final String BASE_PATH = "springboot/maven/java/";
 
-  private static ProjectBlueprint blueprintWithDependencies() {
+  private static ProjectBlueprint blueprint(
+          ArchitectureGovernance governance,
+          Dependencies dependencies
+  ) {
     ProjectMetadata metadata =
-        new ProjectMetadata(
-            new ProjectIdentity(new GroupId("com.acme"), new ArtifactId("demo-app")),
-            new ProjectName("Demo App"),
-            new ProjectDescription("Sample Project"),
-            new PackageName("com.acme.demo"));
+            new ProjectMetadata(
+                    new ProjectIdentity(new GroupId("com.acme"), new ArtifactId("demo-app")),
+                    new ProjectName("Demo App"),
+                    new ProjectDescription("Sample Project"),
+                    new PackageName("com.acme.demo"));
 
     TechStack techStack = new TechStack(Framework.SPRING_BOOT, BuildTool.MAVEN, Language.JAVA);
     PlatformTarget target = new SpringBootJvmTarget(JavaVersion.JAVA_21, SpringBootVersion.V3_5);
     PlatformSpec platform = new PlatformSpec(techStack, target);
 
     ArchitectureSpec architecture =
-        new ArchitectureSpec(
-            ProjectLayout.STANDARD,
-            new ArchitectureGovernance(EnforcementMode.NONE),
-            SampleCodeOptions.none());
-
-    Dependency dep =
-        new Dependency(
-            new DependencyCoordinates(new GroupId("org.acme"), new ArtifactId("custom-dep")),
-            new DependencyVersion("1.0.0"),
-            DependencyScope.RUNTIME);
-
-    Dependencies dependencies = Dependencies.of(List.of(dep));
+            new ArchitectureSpec(ProjectLayout.STANDARD, governance, SampleCodeOptions.none());
 
     return ProjectBlueprint.of(metadata, platform, architecture, dependencies);
+  }
+
+  private static Dependency dep(String groupId, String artifactId) {
+    return new Dependency(
+            new DependencyCoordinates(new GroupId(groupId), new ArtifactId(artifactId)),
+            new DependencyVersion("1.0.0"),
+            DependencyScope.RUNTIME
+    );
   }
 
   @Test
   @DisplayName("artifactKey() should return BUILD_CONFIG")
   void artifactKey_shouldReturnPom() {
     MavenPomBuildConfigurationAdapter adapter =
-        new MavenPomBuildConfigurationAdapter(
-            new NoopTemplateRenderer(),
-            new ArtifactSpec(BASE_PATH, List.of(new TemplateSpec("pom.ftl", "pom.xml"))),
-            new RecordingPomDependencyMapper(List.of()));
+            new MavenPomBuildConfigurationAdapter(
+                    new NoopTemplateRenderer(),
+                    new ArtifactSpec(BASE_PATH, List.of(new TemplateSpec("pom.ftl", "pom.xml"))),
+                    new RecordingPomDependencyMapper(List.of()));
 
     assertThat(adapter.artifactKey()).isEqualTo(ArtifactKey.BUILD_CONFIG);
   }
 
   @Test
-  @DisplayName("buildModel via generate() should populate all POM fields and dependencies")
-  void generate_shouldBuildCorrectModelForPom() {
+  @DisplayName("generate() should build model with base deps only when JPA not selected and governance disabled")
+  void generate_shouldBuildModel_withoutJpa_withoutGovernance() {
     CapturingTemplateRenderer renderer = new CapturingTemplateRenderer();
-    RecordingPomDependencyMapper mapper =
-        new RecordingPomDependencyMapper(
-            List.of(PomDependency.of("org.acme", "custom-dep", "1.0.0", "runtime")));
 
-    TemplateSpec templateSpec = new TemplateSpec("pom.ftl", "pom.xml");
-    ArtifactSpec artifactSpec = new ArtifactSpec(BASE_PATH, List.of(templateSpec));
+    List<PomDependency> mapped =
+            List.of(PomDependency.of("org.acme", "custom-dep", "1.0.0", "runtime"));
+    RecordingPomDependencyMapper mapper = new RecordingPomDependencyMapper(mapped);
 
-    MavenPomBuildConfigurationAdapter adapter =
-        new MavenPomBuildConfigurationAdapter(renderer, artifactSpec, mapper);
+    ArtifactSpec artifactSpec = new ArtifactSpec(BASE_PATH, List.of(new TemplateSpec("pom.ftl", "pom.xml")));
+    MavenPomBuildConfigurationAdapter adapter = new MavenPomBuildConfigurationAdapter(renderer, artifactSpec, mapper);
 
-    ProjectBlueprint blueprint = blueprintWithDependencies();
+    ProjectBlueprint bp =
+            blueprint(
+                    ArchitectureGovernance.none(),
+                    Dependencies.of(List.of(dep("org.acme", "custom-dep")))
+            );
 
-    Path relativePath = Path.of("pom.xml");
-    GeneratedTextResource dummyFile =
-        new GeneratedTextResource(relativePath, "<project/>", StandardCharsets.UTF_8);
-    renderer.nextFile = dummyFile;
+    renderer.nextFile = new GeneratedTextResource(Path.of("pom.xml"), "<project/>", StandardCharsets.UTF_8);
 
-    Iterable<? extends GeneratedResource> result = adapter.generate(blueprint);
+    Iterable<? extends GeneratedResource> result = adapter.generate(bp);
 
-    assertThat(result).singleElement().isSameAs(dummyFile);
-
-    assertThat(renderer.capturedOutPath).isEqualTo(relativePath);
-    assertThat(renderer.capturedTemplateName).isEqualTo(BASE_PATH + "pom.ftl");
-    assertThat(renderer.capturedModel).isNotNull();
+    assertThat(result).singleElement().isSameAs(renderer.nextFile);
 
     Map<String, Object> model = renderer.capturedModel;
-
     assertThat(model)
-        .containsEntry("groupId", "com.acme")
-        .containsEntry("artifactId", "demo-app")
-        .containsEntry("javaVersion", "21")
-        .containsEntry("springBootVersion", "3.5.8")
-        .containsEntry("projectName", "Demo App")
-        .containsEntry("projectDescription", "Sample Project");
-
-    assertThat(mapper.capturedDependencies).isSameAs(blueprint.getDependencies());
+            .containsEntry(MavenPomBuildModel.KEY_GROUP_ID, "com.acme")
+            .containsEntry(MavenPomBuildModel.KEY_ARTIFACT_ID, "demo-app")
+            .containsEntry(MavenPomBuildModel.KEY_JAVA_VERSION, "21")
+            .containsEntry(MavenPomBuildModel.KEY_SPRING_BOOT_VER, "3.5.8")
+            .containsEntry(MavenPomBuildModel.KEY_PROJECT_NAME, "Demo App")
+            .containsEntry(MavenPomBuildModel.KEY_PROJECT_DESCRIPTION, "Sample Project");
 
     @SuppressWarnings("unchecked")
-    List<PomDependency> deps = (List<PomDependency>) model.get("dependencies");
+    Map<String, String> props = (Map<String, String>) model.get(MavenPomBuildModel.KEY_POM_PROPERTIES);
+    assertThat(props).isNotNull().isEmpty();
+
+    @SuppressWarnings("unchecked")
+    List<PomDependency> deps = (List<PomDependency>) model.get(MavenPomBuildModel.KEY_DEPENDENCIES);
     assertThat(deps).hasSize(3);
 
-    PomDependency core = deps.getFirst();
-    assertThat(core.groupId()).isEqualTo("org.springframework.boot");
-    assertThat(core.artifactId()).isEqualTo("spring-boot-starter");
-    assertThat(core.version()).isNull();
-    assertThat(core.scope()).isNull();
+    assertThat(deps.get(0)).isEqualTo(MavenPomBuildModel.CORE_STARTER);
+    assertThat(deps.get(1)).isSameAs(mapped.getFirst());
+    assertThat(deps.get(2)).isEqualTo(MavenPomBuildModel.TEST_STARTER);
+  }
 
-    PomDependency mapped = deps.get(1);
-    assertThat(mapped.groupId()).isEqualTo("org.acme");
-    assertThat(mapped.artifactId()).isEqualTo("custom-dep");
-    assertThat(mapped.version()).isEqualTo("1.0.0");
-    assertThat(mapped.scope()).isEqualTo("runtime");
+  @Test
+  @DisplayName("generate() should add H2 dependency when JPA starter is selected")
+  void generate_shouldAddH2_whenJpaSelected() {
+    CapturingTemplateRenderer renderer = new CapturingTemplateRenderer();
 
-    PomDependency testStarter = deps.get(2);
-    assertThat(testStarter.groupId()).isEqualTo("org.springframework.boot");
-    assertThat(testStarter.artifactId()).isEqualTo("spring-boot-starter-test");
-    assertThat(testStarter.scope()).isEqualTo("test");
+    List<PomDependency> mapped =
+            List.of(PomDependency.of("org.acme", "custom-dep", "1.0.0", "runtime"));
+    RecordingPomDependencyMapper mapper = new RecordingPomDependencyMapper(mapped);
+
+    ArtifactSpec artifactSpec = new ArtifactSpec(BASE_PATH, List.of(new TemplateSpec("pom.ftl", "pom.xml")));
+    MavenPomBuildConfigurationAdapter adapter = new MavenPomBuildConfigurationAdapter(renderer, artifactSpec, mapper);
+
+    Dependency jpaStarter =
+            new Dependency(
+                    new DependencyCoordinates(new GroupId("org.springframework.boot"), new ArtifactId("spring-boot-starter-data-jpa")),
+                    null,
+                    DependencyScope.RUNTIME
+            );
+
+    ProjectBlueprint bp =
+            blueprint(
+                    ArchitectureGovernance.none(),
+                    Dependencies.of(List.of(dep("org.acme", "custom-dep"), jpaStarter))
+            );
+
+    renderer.nextFile = new GeneratedTextResource(Path.of("pom.xml"), "<project/>", StandardCharsets.UTF_8);
+
+    adapter.generate(bp);
+
+    @SuppressWarnings("unchecked")
+    List<PomDependency> deps = (List<PomDependency>) renderer.capturedModel.get(MavenPomBuildModel.KEY_DEPENDENCIES);
+
+    assertThat(deps).hasSize(4);
+    assertThat(deps.get(0)).isEqualTo(MavenPomBuildModel.CORE_STARTER);
+    assertThat(deps.get(1)).isSameAs(mapped.getFirst());
+    assertThat(deps.get(2)).isEqualTo(MavenPomBuildModel.H2_DB);
+    assertThat(deps.get(3)).isEqualTo(MavenPomBuildModel.TEST_STARTER);
+
+    @SuppressWarnings("unchecked")
+    Map<String, String> props = (Map<String, String>) renderer.capturedModel.get(MavenPomBuildModel.KEY_POM_PROPERTIES);
+    assertThat(props).isNotNull().isEmpty();
+  }
+
+  @Test
+  @DisplayName("generate() should add ArchUnit test dependency and pomProperties when governance is enabled")
+  void generate_shouldAddArchUnit_whenGovernanceEnabled() {
+    CapturingTemplateRenderer renderer = new CapturingTemplateRenderer();
+
+    List<PomDependency> mapped =
+            List.of(PomDependency.of("org.acme", "custom-dep", "1.0.0", "runtime"));
+    RecordingPomDependencyMapper mapper = new RecordingPomDependencyMapper(mapped);
+
+    ArtifactSpec artifactSpec = new ArtifactSpec(BASE_PATH, List.of(new TemplateSpec("pom.ftl", "pom.xml")));
+    MavenPomBuildConfigurationAdapter adapter = new MavenPomBuildConfigurationAdapter(renderer, artifactSpec, mapper);
+
+    Dependency jpaStarter =
+            new Dependency(
+                    new DependencyCoordinates(new GroupId("org.springframework.boot"), new ArtifactId("spring-boot-starter-data-jpa")),
+                    null,
+                    DependencyScope.RUNTIME
+            );
+
+    ProjectBlueprint bp =
+            blueprint(
+                    ArchitectureGovernance.basic(),
+                    Dependencies.of(List.of(dep("org.acme", "custom-dep"), jpaStarter))
+            );
+
+    renderer.nextFile = new GeneratedTextResource(Path.of("pom.xml"), "<project/>", StandardCharsets.UTF_8);
+
+    adapter.generate(bp);
+
+    @SuppressWarnings("unchecked")
+    Map<String, String> props = (Map<String, String>) renderer.capturedModel.get(MavenPomBuildModel.KEY_POM_PROPERTIES);
+    assertThat(props)
+            .isNotNull()
+            .containsEntry(MavenPomBuildModel.ARCH_UNIT_VERSION_KEY, MavenPomBuildModel.ARCH_UNIT_VERSION);
+
+    @SuppressWarnings("unchecked")
+    List<PomDependency> deps = (List<PomDependency>) renderer.capturedModel.get(MavenPomBuildModel.KEY_DEPENDENCIES);
+
+    assertThat(deps).hasSize(5);
+    assertThat(deps.get(0)).isEqualTo(MavenPomBuildModel.CORE_STARTER);
+    assertThat(deps.get(1)).isSameAs(mapped.getFirst());
+    assertThat(deps.get(2)).isEqualTo(MavenPomBuildModel.H2_DB);
+    assertThat(deps.get(3)).isEqualTo(MavenPomBuildModel.ARCH_UNIT_TEST);
+    assertThat(deps.get(4)).isEqualTo(MavenPomBuildModel.TEST_STARTER);
   }
 }
